[package]
name = "tennis_db_api"
version = "0.1.0"
edition = "2021"
authors = ["MichlF <email.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
dotenv = "0.15.0"
tokio-postgres = "0.7.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }